added sidebar menu renderer and home page

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Stencil Starter",
-  "short_name": "Stencil",
+  "name": "PrivateSky Web Components",
+  "short_name": "PSKWebComponents",
   "start_url": "/",
   "display": "standalone",
   "icons": [{
