--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@stencil/core": "^1.3.2",
-    "@stencil/router": "^1.0.1"
+    "@stencil/router": "^1.0.1",
+    "webcomponents": "file:../pskwebcomponents"
   },
   "license": "MIT"
 }
