show how psk-user-profile component works

--- a/src/global/app-navigation-structure.json
+++ b/src/global/app-navigation-structure.json
@@ -23,6 +23,7 @@
         "path": "/psk-components/user-profile",
         "icon": "fa-bars",
         "type": "route",
+        "component":"user-profile-usage",
         "exact":true
       },
       {
