--- a/src/global/app-navigation-structure.json
+++ b/src/global/app-navigation-structure.json
@@ -14,6 +14,7 @@
     "children": [{
       "name": "App Menu",
       "path": "/psk-components/app-menu",
+      "component":"app-menu-usage",
       "icon": "fa-bars",
       "type": "route",
       "exact":true
