--- a/src/global/app-navigation-structure.json
+++ b/src/global/app-navigation-structure.json
@@ -27,6 +27,22 @@
                 "exact": true
             },
             {
+                "name": "Attachments List",
+                "component": "attachment-list-usage",
+                "path": "/psk-components/attach-list",
+                "icon": "fa-bars",
+                "type": "route",
+                "exact": true
+            },
+            {
+                "name": "Files Chooser",
+                "component": "files-chooser-usage",
+                "path": "/psk-components/files-chooser",
+                "icon": "fa-bars",
+                "type": "route",
+                "exact": true
+            },
+            {
                 "name": "Modal",
                 "component": "modal-usage",
                 "path": "/psk-components/modal",
