Added psk-wizard - WIP

--- a/src/global/app-navigation-structure.json
+++ b/src/global/app-navigation-structure.json
@@ -84,12 +84,20 @@
                 "exact": true
             },
             {
-              "name": "Feedback Alert",
-              "path": "/psk-components/ui-feedback",
-              "icon": "fa-bars",
-              "type": "route",
-              "component":"feedback-alert-usage",
-              "exact":true
+                "name": "Feedback Alert",
+                "path": "/psk-components/ui-feedback",
+                "icon": "fa-bars",
+                "type": "route",
+                "component": "feedback-alert-usage",
+                "exact": true
+            },
+            {
+                "name": "Wizard",
+                "path": "/psk-components/wizard",
+                "icon": "fa-bars",
+                "type": "route",
+                "component": "wizard-usage",
+                "exact": true
             }
         ]
     },
