--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
-#theme: jekyll-theme-cayman
-remote_theme: paiusCatalin/pwc-apps-theme
+theme: jekyll-theme-cayman
+#remote_theme: paiusCatalin/pwc-apps-theme
