added simple controller page

--- a/src/global/app-navigation-structure.json
+++ b/src/global/app-navigation-structure.json
@@ -114,6 +114,8 @@
         "path": "/controllers",
         "icon": "fa-cog",
         "type": "route",
+        "component": "psk-page-loader",
+        "componentProps": {"pageUrl": "https://privatesky.xyz"},
         "exact": true
     },
     {
