--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pwc-apps",
   "private": true,
   "version": "0.0.1",
-  "description": "Stencil App Starter",
+  "description": "PrivateSky Development Hub",
   "scripts": {
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
