--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "PrivateSky Development Hub",
   "scripts": {
     "build": "stencil build",
+    "build-website": "node ./scripts/build-website.js",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
