--- a/src/global/app-navigation-structure.json
+++ b/src/global/app-navigation-structure.json
@@ -1,98 +1,87 @@
-[
-  {
+[{
     "name": "PSK Components",
     "path": "/psk-components",
     "icon": "fa-bars",
     "type": "abstract",
-    "children": [
-      {
-        "name": "App Menu",
-        "path": "/psk-components/app-menu",
-        "component": "app-menu-usage",
-        "icon": "fa-bars",
-        "type": "route",
-        "exact": true
-      },
-      {
-        "name": "App Router",
-        "component": "app-router-usage",
-        "path": "/psk-components/app-router",
-        "icon": "fa-bars",
-        "type": "route",
-        "exact": true
-      },
-      {
-        "name": "Attachments List",
-        "component": "attachment-list-usage",
-        "path": "/psk-components/attach-list",
-        "icon": "fa-bars",
-        "type": "route",
-        "exact": true
-      },
-      {
-        "name": "Files Chooser",
-        "component": "files-chooser-usage",
-        "path": "/psk-components/files-chooser",
-        "icon": "fa-bars",
-        "type": "route",
-        "exact": true
-      },
-      {
-        "name": "Modal",
-        "component": "modal-usage",
-        "path": "/psk-components/modal",
-        "icon": "fa-bars",
-        "type": "route",
-        "exact": true
-      },
-      {
-        "name": "Page not found",
-        "component": "page-not-found-usage",
-        "path": "/psk-components/page-not-found",
-        "icon": "fa-bars",
-        "type": "route",
-        "exact": true
-      },
-      {
-        "name": "PIN Popup",
-        "component": "pin-popup-usage",
-        "path": "/psk-components/pin-popup",
-        "icon": "fa-bars",
-        "type": "route",
-        "exact": true
-      },
-      {
-        "name": "UI Loader",
-        "component": "ui-loader-usage",
-        "path": "/psk-components/ui-loader",
-        "icon": "fa-bars",
-        "type": "route",
-        "exact": true
-      },
-      {
-        "name": "User Profile",
-        "path": "/psk-components/user-profile",
-        "icon": "fa-bars",
-        "type": "route",
-        "component": "user-profile-usage",
-        "exact": true
-      },
-      {
-        "name": "Feedback List",
-        "path": "/psk-components/list-feedback",
-        "icon": "fa-bars",
-        "type": "route",
-        "component": "feedback-list-usage",
-        "exact": true
-      },
-      {
-        "name": "Wizard",
-        "path": "/psk-components/wizard",
-        "icon": "fa-bars",
-        "type": "route",
-        "component": "wizard-usage",
-        "exact": true
-      }
+    "children": [{
+            "name": "App Menu",
+            "path": "/psk-components/app-menu",
+            "component": "app-menu-usage",
+            "icon": "fa-bars",
+            "type": "route",
+            "exact": true
+        },
+        {
+            "name": "App Router",
+            "component": "app-router-usage",
+            "path": "/psk-components/app-router",
+            "icon": "fa-bars",
+            "type": "route",
+            "exact": true
+        },
+        {
+            "name": "Attachments List",
+            "component": "attachment-list-usage",
+            "path": "/psk-components/attach-list",
+            "icon": "fa-bars",
+            "type": "route",
+            "exact": true
+        },
+        {
+            "name": "Files Chooser",
+            "component": "files-chooser-usage",
+            "path": "/psk-components/files-chooser",
+            "icon": "fa-bars",
+            "type": "route",
+            "exact": true
+        },
+        {
+            "name": "Modal",
+            "component": "modal-usage",
+            "path": "/psk-components/modal",
+            "icon": "fa-bars",
+            "type": "route",
+            "exact": true
+        },
+        {
+            "name": "PIN Popup",
+            "component": "pin-popup-usage",
+            "path": "/psk-components/pin-popup",
+            "icon": "fa-bars",
+            "type": "route",
+            "exact": true
+        },
+        {
+            "name": "UI Loader",
+            "component": "ui-loader-usage",
+            "path": "/psk-components/ui-loader",
+            "icon": "fa-bars",
+            "type": "route",
+            "exact": true
+        },
+        {
+            "name": "User Profile",
+            "path": "/psk-components/user-profile",
+            "icon": "fa-bars",
+            "type": "route",
+            "component": "user-profile-usage",
+            "exact": true
+        },
+        {
+            "name": "Feedback List",
+            "path": "/psk-components/list-feedback",
+            "icon": "fa-bars",
+            "type": "route",
+            "component": "feedback-list-usage",
+            "exact": true
+        },
+        {
+            "name": "Wizard",
+            "path": "/psk-components/wizard",
+            "icon": "fa-bars",
+            "type": "route",
+            "component": "wizard-usage",
+            "exact": true
+        }
     ]
-  }
-]
+}]
