--- a/docs/app-config.json
+++ b/docs/app-config.json
@@ -1,7 +1,7 @@
 {
   "basePagesUrl": "https://privatesky.xyz/pages/",
   "profile": {
-    "username": "PrivateSky Core",
+    "username": "PrivateSky",
     "email": "privatesky@axiologic.net",
     "avatar": "https://privatesky.xyz/assets/images/privatesky.png"
   },
