--- a/docs/app-config.json
+++ b/docs/app-config.json
@@ -10,7 +10,8 @@
       "icon": "fa-bars",
       "type": "route",
       "component": "psk-page-loader",
-      "exact": true
+      "exact": true,
+	   "pagePrefix": "/page:"
     },
     "pages": [{
       "name": "Home",
