--- a/docs/app-config.json
+++ b/docs/app-config.json
@@ -10,8 +10,8 @@
       "icon": "fa-bars",
       "type": "route",
       "component": "psk-page-loader",
-      "exact": true,
-	  "pagePrefix": "page?="
+      "exact": true
+	  
     },
     "pages": [{
       "name": "Home",
