--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.2",
   "description": "PrivateSky Development Hub",
   "scripts": {
-    "generate-sitemap": "node ./bin/generate-sitemap.js",
+    "generate-sitemap": "node -r esm ./bin/generate-sitemap.js",
     "web-server": "ws --spa ./index.html",
     "update-cardinal": "node ./bin/update-cardinal.js"
   },
   "devDependencies": {
-    "local-web-server": "^3.0.7"
+    "local-web-server": "^3.0.7",
+    "esm": "^3.2.25"
   },
   "license": "MIT"
 }
