--- a/app-config.json
+++ b/app-config.json
@@ -1,4 +1,5 @@
 {
+  "baseUrl": "https://privatesky.xyz",
   "basePagesUrl": "https://privatesky.xyz/pages/",
   "profile": {
     "username": "PrivateSky",
