--- a/app-config.json
+++ b/app-config.json
@@ -22,7 +22,7 @@
       "pageSrc": "index.html"
     },
       {
-        "name": "PrivateSky-Test",
+        "name": "PrivateSky-Tes",
         "path": "/PrivateSky",
         "icon": "fa-cog",
         "children": [{
