--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,8 @@ jobs:
       run: |
         npm ci
         npm run generate-sitemap --if-present
+        git config --global user.email "mastaleru.rafael@gmail.com"
+        git config --global user.name "Mastaleru Rafael"
         git add sitemap.xml
         git commit -m "GithubRunner:sitemap.xml was updated"
         git push
