--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,6 +25,6 @@ jobs:
         git config --global user.name "Mastaleru Rafael"
         git add sitemap.xml
         git commit -m "GithubRunner:sitemap.xml was updated"
-        git push
+        git push origin master
       env:
         CI: true
