--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm ci
+        git checkout master
         npm run generate-sitemap --if-present
         git config --global user.email "mastaleru.rafael@gmail.com"
         git config --global user.name "Mastaleru Rafael"
