--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,7 @@ jobs:
         git add sitemap.xml
         git commit -m "GithubRunner:sitemap.xml was updated"
         export GITHUB_TOKEN=$token
+        git status
         git push --set-upstream origin sitemap-test
       env:
         CI: true
