--- a/app-config.json
+++ b/app-config.json
@@ -23,7 +23,7 @@
     },
       {
         "name": "PrivateSky",
-        "path": "/PrivateSkyTes4ts643t",
+        "path": "/PrivateSkyTes4tss643t",
         "icon": "fa-cog",
         "children": [{
           "name": "Main Innovations"
