--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,7 +30,9 @@ jobs:
         git config user.email "mastaleru.rafael@gmail.com"
         git add sitemap.xml
         git commit -m "GithubRunner:sitemap.xml was updated"
-        git status
-        git push
+        echo $SITEMAP_TOKEN
+        echo $GITHUB_TOKEN
+        git config url."git@github.com:".insteadOf "https://github.com/"
+        git push --dry-run
       env:
         CI: true
